bugfix: tooltip aligned with mouse position to show correctly on scroll

--- a/src/app/css/tooltip.css
+++ b/src/app/css/tooltip.css
@@ -1,5 +1,5 @@
 .tooltip {
-    position: absolute;
+    position: fixed;
     background-color: var(--second-background-1);
     z-index: 3;
     height: auto;
